<resources>
    <string name="app_name">MediVoice</string>
    <string name="clear_screen">Clear screen</string>
    <string name="delete_letter">Delete letter</string>
    <string name="t_9">T9</string>
    <string name="no_suggestion">…</string>
    <string name="share">Share</string>
    <string name="key_sym_1">"1\nSym"</string>
    <string name="key_personal_details">"Personal\ndetails"</string>
    <string name="key_abc_2">"2\nABC"</string>
    <string name="key_medicines">\nMedication</string>
    <string name="key_def_3">"3\nDEF</string>
    <string name="key_medical_allergies">"\nAllergies"</string>
    <string name="key_ghi_4">"4\nGHI"</string>
    <string name="key_food_allergies">"Food\nallergies"</string>
    <string name="key_jkl_5">"5\nJKL"</string>
    <string name="key_gp">G.P /\nMedical Team</string>
    <string name="key_mno_6">"6\nMNO"</string>
    <string name="key_likes_dislikes">"\nAbout Me"</string>
    <string name="key_pqrs_7">"7\nPQRS"</string>
    <string name="key_diagnosis">Medical Diagnosis</string>
    <string name="key_tuv_8">"8\nTUV"</string>
    <string name="key_about_me">"Personal Care / Support"</string>
    <string name="key_wxyz_9">"9\nWXYZ"</string>
    <string name="key_letter_case">"*\nAa/A/a"</string>
    <string name="key_space_0">"0\n_"</string>
    <string name="new_line">"\n_"</string>
    <string name="default_text_when_not_specified"></string>
    <string name="personal_details">Personal Details</string>
    <string name="personal_details_first_name">First Name</string>
    <string name="personal_details_last_name">Last Name</string>
    <string name="personal_details_name_to_be_called">Name I like to go by</string>
    <string name="personal_details_live_with">Who I live with</string>
    <string name="personal_details_email">Email</string>
    <string name="personal_details_dob">D.O.B</string>
    <string name="personal_details_birth">Date Of Birth</string>
    <string name="personal_details_nhs">NHS/Health Number</string>
    <string name="personal_details_street">Street Address</string>
    <string name="personal_details_Town">Town Address</string>
    <string name="personal_details_county_state_Province"> County/State/Province</string>
    <string name="personal_details_ZIP">ZIP/Postal Code</string>
    <string name="personal_details_Country">Country</string>
    <string name="personal_details_main_carer">Main Carer</string>
    <string name="personal_details_carer_tel">Carer Tel</string>
    <string name="personal_details_translator_needed">Do You Need a Translator</string>
    <string name="personal_details_home_tel">Home Telephone</string>
    <string name="personal_details_mobile">Mobile Number</string>
    <string name="personal_details_gender">Gender</string>
    <string name="personal_details_carer_language">Language of Carer</string>
    <string name="personal_details_Next_of_kin">Next of Kin</string>
    <string name="personal_details_first_lang">First Language</string>
    <string name="medicines">Medication</string>
    <string name="medicines_title">How I take my medication</string>
    <string name="medicines_name">Name</string>
    <string name="medicines_dosage">Dosage</string>
    <string name="medicines_reason">Reason</string>
    <string name="medicines_frequency">Frequency</string>
    <string name="medicines_edit">Edit</string>
    <string name="medicines_add">Add medicine</string>
    <string name="medical_allergies">Medical Allergies</string>
    <string name="medical_allergies_title">Medical Allergies</string>
    <string name="food_allergies">Food Allergies</string>
    <string name="food_allergies_title">Food Allergies</string>
    <string name="gp_medical_team">G.P / Medical Team</string>
    <string name="gp_title">GP</string>
    <string name="gp_medical_team_name">Name</string>
    <string name="gp_medical_team_address">Address</string>
    <string name="gp_medical_team_phone">Phone</string>
    <string name="gp_medical_team_fax">Fax</string>
    <string name="gp_medical_team_email">Email</string>
    <string name="mnd_contact_title">Consultant</string>
    <string name="physiotherapist_title">Physiotherapist</string>
    <string name="therapist_title">Speech and language therapist</string>
    <string name="carer_title">Carer</string>
    <string name="other_medical_title">Other</string>
    <string name="likes_dislikes">About Me</string>
    <string name="likes_dislikes_daily_routine">My Daily Routine</string>
    <string name="likes_dislikes_hobbies">My Interests / Hobbies</string>
    <string name="likes_dislikes_music">Music / Radio Station I listen to</string>
    <string name="likes_dislikes_tv">Television Shows I Enjoy</string>
    <string name="likes_dislikes_other">Other</string>
    <string name="diagnosis">Medical Diagnosis</string>
    <string name="diagnosis_title">Diagnosis</string>
    <string name="diagnosis_subtitle">Other Medical Conditions e.g Diabetic, Asthma, Depression</string>
    <string name="about_me">Personal Care/ Support</string>
    <string name="about_me_sitting_position">Sitting (Position/Pattern)</string>
    <string name="about_me_need_to_use">I Need To Use</string>
    <string name="about_me_breathing">Breathing Difficulties</string>
    <string name="about_me_breathing_when">Breathing Difficulties When</string>
    <string name="about_me_sleep_position">Sleep Position</string>
    <string name="about_me_swallowing_difficulties">Eating &amp; Drinking</string>
    <string name="about_me_swallowing_difficulties_subtitle">I Have Swallowing Difficulties</string>
    <string name="about_me_physical_abilities">Physical Abilities</string>
    <string name="about_me_physical_abilities_subtitle">I Can Walk</string>
    <string name="about_me_transfer_to">I Need Help To Transfer To</string>
    <string name="medicine_add_success_message">Medicine added successfully</string>
    <string name="feeding_method">Feeding Method</string>
    <string name="add">Add</string>
    <string name="save">save</string>
    <string name="add_new_medicine">Add New Medicine</string>
    <string name="medicine_update_success_message">Medicine updated</string>
    <string name="address_title">Address</string>
    <string name="street_title">Street</string>
    <string name="town_title">Town</string>
    <string name="county_title">County</string>
    <string name="type">Type</string>
    <string name="gp_hospital_name">Hospital Name</string>
    <string name="gp_hospital_address">Hospital Address</string>
    <string name="gp_hospital_phone">Hospital Phone</string>
    <string name="gp_hospital_fax">Hospital Fax</string>
    <string name="no_content_medicine">There are no medicines to display. Please tap on the \"+\" icon in the top right corner to add a new medicine</string>
    <string name="text_size">Text Size</string>
    <string name="email_validation">Please enter email address in valid format</string>
    <string name="add_new_team_member">Add New Team Member</string>
    <string name="change_font_size">Change Text Size</string>
    <string name="small_font_text">Small</string>
    <string name="normal_font_text">Normal</string>
    <string name="large_font_text">Large</string>
    <string name="change_font_message">Please select the font size for the app</string>
    <string name="add_gp_validation">Filling all the fields is mandatory</string>
    <string name="gp_consultant_address">Consultant Address</string>
    <string name="gp_consultant_phone">Consultant Phone</string>
    <string name="gp_consultant_email">Consultant Email</string>
    <string name="vitals_blood_pressure_title">Blood Pressure Record</string>
    <string name="date_title">Date</string>
    <string name="vitals_blood_pressure_subtitle">Blood Pressure</string>
    <string name="key_vitals">\nVitals</string>
    <string name="no_content_medical_allergies">Currently there are no entries for medical allergies. Please click on the + icon above to add a new entry.</string>
    <string name="no_content_bloodglucose">Currently there are no entries for blood glucose. Please click on the + icon above to add a new entry.</string>
    <string name="no_content_bloodpressure">Currently there are no entries for blood pressure. Please click on the + icon above to add a new entry.</string>
    <string name="vitals_blood_glucose_title">Blood Glucose</string>
    <string name="vitals_blood_glucose_subtitle">Blood Glucose</string>
    <string name="vitals_oxygen_level_title">Oxygen Level</string>
    <string name="vitals_oxygen_level_subtitle">Oxygen Level</string>
    <string name="vitals_height_title">Height</string>
    <string name="vitals_height_subtitle">Height</string>
    <string name="vitals_weight_title">Weight</string>
    <string name="vitals_weight_subtitle">Weight</string>
    <string name="no_content_height">Currently there are no entries for height. Please click on the + icon above to add a new entry.</string>
    <string name="no_content_weight">Currently there are no entries for weight. Please click on the + icon above to add a new entry.</string>
    <string name="no_content_oxygen">Currently there are no entries for oxygen level. Please click on the + icon above to add a new entry.</string>
    <string name="medical_allergies_subtitle">Allergy</string>
    <string name="type_title">Type Of Allergy</string>
    <string name="food_allergies_subtitle">Allergy</string>
    <string name="environmental_allergies_title">Environmental Allergies</string>
    <string name="environmental_allergies_subtitle">Allergy</string>
    <string name="no_content_food_allergies">Currently there are no entries for food allergies. Please click on the + icon above to add a new entry.</string>
    <string name="no_content_environmental_allergies">
        Currently there are no entries for environmental allergies. Please click on the + icon above to add a new entry.</string>
    <string name="title_activity_medical_diagnosis">MedicalDiagnosisActivity</string>
    <string name="no_content_diagnosis">Currently there are no entries for diagnosis. Please click on the + icon above to add a new entry.</string>
    <string name="surgical_history_title">Surgical History</string>
    <string name="surgical_history_subtitle">Surgery</string>
    <string name="no_content_surgical_history">Currently there are no entries for surgical history. Please click on the + icon above to add a new entry.</string>
    <string name="renal_dosage">Renal dosage required</string>
    <string name="hepatic_dosage">Hepatic dosage required</string>
    <string name="vitals">Vitals</string>
    <string name="allergies">Allergies</string>
    <string name="dialog_close_button">Close</string>
    <string name="save_message">Data Saved</string>
    <string name="fax_label">Fax</string>
    <string name="cancel_button">Cancel</string>
    <string name="save_button">Save</string>
    <string name="edit_button">Edit</string>
    <string name="medi_records">Medical\nRecords</string>
    <string name="terms_and_conditions">App information</string>
</resources>