<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minWidth="@dimen/label_min_width"
        android:padding="@dimen/margin_small"
        android:textSize="@dimen/text_normal_size"
        android:textStyle="bold"
        tools:text="Title" />

    <include layout="@layout/divider" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/NameInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        app:hintTextAppearance="@style/StyledTilEditTextFloatingLabel">

        <EditText
            android:id="@+id/edit1"
            style="@style/EditTextStyle"
            android:hint="@string/gp_medical_team_name" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/AddressInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextAppearance="@style/StyledTilEditTextFloatingLabel">

        <EditText
            android:id="@+id/edit2"
            style="@style/EditTextStyle"
            android:hint="@string/gp_medical_team_address"
            android:singleLine="false" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/PhoneInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextAppearance="@style/StyledTilEditTextFloatingLabel">

        <EditText
            android:id="@+id/edit3"
            style="@style/EditTextStyle"
            android:hint="@string/gp_medical_team_phone" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/eMailInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextAppearance="@style/StyledTilEditTextFloatingLabel">

        <EditText
            android:id="@+id/edit4"
            style="@style/EditTextStyle"
            android:hint="@string/gp_medical_team_email" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/FaxInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextAppearance="@style/StyledTilEditTextFloatingLabel">

        <EditText
            android:id="@+id/edit5"
            style="@style/EditTextStyle"
            android:hint="@string/gp_medical_team_fax" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/margin_small"
        android:visibility="gone">

        <Button
            android:id="@+id/cancel"
            style="@style/DefaultButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="1"
            android:text="@string/cancel_button" />

        <Button
            android:id="@+id/save"
            style="@style/DefaultButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="1"
            android:text="@string/save_button" />
    </LinearLayout>


    <Button
        android:id="@+id/editButton"
        style="@style/DefaultButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_small"
        android:text="@string/edit_button" />

</LinearLayout>