<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">
<RelativeLayout
    android:minWidth="@dimen/label_min_width"
    android:padding="@dimen/margin_small"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/title"
        android:layout_alignParentLeft="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_big_size"
        tools:text="@string/vitals_blood_pressure_title" />

    <ImageView
        android:layout_alignParentRight="true"
        android:id="@+id/addBloodPressureButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>

    <include layout="@layout/divider" />

    <RelativeLayout
        android:id="@+id/bpTitleLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minWidth="@dimen/label_min_width"
        android:padding="@dimen/margin_small">

        <TextView
            android:id="@+id/bloodPressureTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:minWidth="@dimen/label_min_width"
            android:textSize="@dimen/text_normal_size"
            tools:text="@string/vitals_blood_pressure_subtitle" />

        <TextView
            android:gravity="center"
            android:id="@+id/bpDateTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:minWidth="@dimen/label_min_width"
            android:textSize="@dimen/text_normal_size"
            tools:text="@string/date_title" />

    </RelativeLayout>

    <include layout="@layout/divider" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/bloodPressureRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp" />

</LinearLayout>
